@@ -421,11 +421,33 @@ CREATE INDEX issuedhash_clienthost
 CREATE INDEX issuedhash_user_id_clienthost
   ON issuedhash (user_id, clienthost);
 
+/* Operation Log Store */
+CREATE TABLE operationlog (
+	id				INTEGER DEFAULT nextval('serial'),
+	dt          	TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+	user            VARCHAR(48),
+	client_id_in    VARCHAR(48),
+	client_id_out   VARCHAR(48),
+	require_auth    BIT(1),
+	set_auth        BIT(1),
+	client_ip       VARCHAR(60),
+	path            VARCHAR(256),
+	access          VARCHAR(20),
+	context         VARCHAR(50),
+	get_data        TEXT,
+	post_data       TEXT,
+	result          TEXT,
+	error           TEXT,
+	PRIMARY KEY(id)
+);
+/* In case of real deployment, some indices are required for quick operations. */
+
 /* Grant to All operations for all objects with web account */
 GRANT ALL PRIVILEGES ON SCHEMA im_sample TO web;
 GRANT ALL PRIVILEGES ON im_sample.authcor TO web;
 GRANT ALL PRIVILEGES ON im_sample.authgroup TO web;
 GRANT ALL PRIVILEGES ON im_sample.authuser TO web;
+GRANT ALL PRIVILEGES ON im_sample.operationlog TO web;
 GRANT ALL PRIVILEGES ON im_sample.chat TO web;
 GRANT ALL PRIVILEGES ON im_sample.contact TO web;
 GRANT ALL PRIVILEGES ON im_sample.contact_kind TO web;
