@@ -254,3 +254,11 @@ $slackParameters = [
     "token"=>'xoxp-XXXXXXXXXXX-XXXXXXXXXXX-XXXXXXXXXXXX-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx',
     "channel" => 'message-posting-test',
 ];
+
+// Operation Log: the table named 'operationlog' is required.
+// The schema of the table describes in dist-docs/sample_schema_*.txt files.
+$accessLogLevel = false;    // false: No logging, 1: without data, 2: with data
+$dbClassLog = $dbClass;
+$dbDSNLog = $dbDSN;
+$dbUserLog = $dbUser;
+$dbPasswordLog = $dbPassword;
