@@ -1,0 +1,64 @@
+<!DOCTYPE html>
+<!--
+/*
+ * INTER-Mediator
+ * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
+ * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
+ *
+ * INTER-Mediator is supplied under MIT License.
+ * Please see the full license for details:
+ * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
+ */  -->
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+    <title>INTER-Mediator - Account</title>
+    <script src="MySQL_contexts.php"></script>
+</head>
+<body onload="INTERMediator.construct(true);">
+<h1 style="font-weight:bold;color:blueviolet">Operation Log Viewer</h1>
+<p>The operation logging feature is off as default.
+    If you want to activate it, you'd like to set the $accessLogLevel variable in the params.php file.</p>
+<div id="IM_NAVIGATOR"></div>
+<table>
+    <thead>
+    <tr>
+        <th>id</th>
+        <th>dt</th>
+        <th>user</th>
+        <th>client_id_in</th>
+        <th>client_id_out</th>
+        <th>require_auth</th>
+        <th>set_auth</th>
+        <th>client_ip</th>
+        <th>path</th>
+        <th>access</th>
+        <th>context</th>
+        <th>get_data</th>
+        <th>post_data</th>
+        <th>result</th>
+        <th>error</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td data-im="operationlog@id"></td>
+        <td data-im="operationlog@dt"></td>
+        <td data-im="operationlog@user"></td>
+        <td data-im="operationlog@client_id_in"></td>
+        <td data-im="operationlog@client_id_out"></td>
+        <td data-im="operationlog@require_auth"></td>
+        <td data-im="operationlog@set_auth"></td>
+        <td data-im="operationlog@client_ip"></td>
+        <td data-im="operationlog@path"></td>
+        <td data-im="operationlog@access"></td>
+        <td data-im="operationlog@context"></td>
+        <td data-im="operationlog@get_data"></td>
+        <td data-im="operationlog@post_data"></td>
+        <td data-im="operationlog@result"></td>
+        <td data-im="operationlog@error"></td>
+    </tr>
+    </tbody>
+</table>
+</body>
+</html>
