@@ -1,0 +1,100 @@
+/*
+ * INTER-Mediator
+ * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
+ * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
+ *
+ * INTER-Mediator is supplied under MIT License.
+ * Please see the full license for details:
+ * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
+ */
+
+.IM_NAV_panel {
+    background-color: #CCCCCC;
+    padding: 4px;
+    margin: 4px 0 4px 0;
+}
+
+.IM_NAV_JUMP   {
+    width: 50px;
+    text-align: right;
+}
+
+span.IM_NAV_info {
+    font-size: 9pt;
+    color: #333333;
+}
+
+span.IM_NAV_button {
+    padding: 2px 4px 2px 4px;
+    margin: 2px 6px 2px 6px;
+    border-radius: 3px;
+    background-color: #000000;
+    color: yellow;
+    cursor: pointer;
+}
+
+span.IM_NAV_disabled {
+    background-color: #666666;
+    color: #333333;
+}
+
+div.IM_CREDIT {
+
+}
+
+span.IM_POSTMESSAGE {
+    color: orange;
+}
+
+#_im_authpanel{
+    width: 350px;
+    background-color: #333333;
+    color: #DDDDAA;
+    margin: 50px auto 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+}
+._im_authlabel   {
+    width: 100px;
+    text-align: right;
+    float: left;
+}
+
+#_im_password{}
+#_im_username{}
+#_im_authbutton{}
+#_im_changebutton{}
+
+table {
+    border-collapse: collapse;
+    background-color: #EEEEEE;
+}
+
+th {
+    border: 2px solid #444444;
+    padding: 6px;
+    margin: 4px;
+}
+
+td {
+    border: 2px solid #444444;
+    padding: 4px;
+    margin: 4px;
+}
+
+input   {
+    font-size: 14pt;;
+}
+
+textarea   {
+    font-size: 14pt;;
+}
+
+option   {
+    font-size: 14pt;;
+}
+
+button   {
+    font-size: 14pt;;
+}
