@@ -266,7 +266,17 @@
     <tr>
         <td colspan="2">Aggregation Query</td>
         <td>
-            <a href="Sample_Extensible/aggregation3.html">show</a><br>
+            <a href="Sample_Extensible/aggregation3.html">show</a>
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td colspan="2">Operation Log Viewer</td>
+        <td>
+            <a href="Log_Support/MySQL_logviewer.html">show</a>
         </td>
         <td></td>
         <td></td>
